<resources>
    <string name="app_name">NotPadBR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="adicionar">Adicionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="criar">Criar</string>
    <string name="tema">Temas</string>
    <string name="cores">Cores</string>


    <string-array name="planets_array">
        <item></item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>