<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textViewOpcoesNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Share Now"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divisor" />

    <TextView
        android:id="@+id/textViewFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_adiconar_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/criar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_edit_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/editar" />

    <TextView
        android:id="@+id/textViewDeletarNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_delete_outline_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/deletar" />

    <TextView
        android:id="@+id/textViewCompartilhar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_share_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/compartilhar" />

    <Button
        android:id="@+id/buttonclose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="Close"
        android:textColor="@android:color/white" />
</LinearLayout>