<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageViewCloseItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="4dp"
        android:elevation="5dp"
        app:srcCompat="@drawable/ic_action_navigation_close_inverted" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/design_default_color_on_primary"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewAdionarLista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/ic_adiconar_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorPrimary"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/criar" />

                <TextView
                    android:id="@+id/textViewEditarLista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/ic_edit_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorPrimary"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/editar" />

                <TextView
                    android:id="@+id/textViewDeletarLista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/ic_delete_outline_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorPrimary"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/deletar" />

                <Button
                    android:id="@+id/buttonCancelarLista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/bg_button"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/cancelar"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>